1st project page- style

--- a/data/projects.json
+++ b/data/projects.json
@@ -16,7 +16,7 @@
     "id": "Suite as Pie",
     "shortdesc": "Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
     "desc": "About this project: this is an Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
-    "link": "suite-as-pie.html",
+    "link": "content/projects/project-template.html",
     "title": "Suite as Pie hotel service app",
     "category": "UX",
     "thumbnail": "content/images/suiteaspie/sapthumb.png",
