project-html to root and all paths update

--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,7 @@
     "id": "racespace",
     "shortdesc": "An interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts — enabling faster, smarter selling and sponsorship decisions at a glance.",
     "desc": "About this project: this was an interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts — enabling faster, smarter selling and sponsorship decisions at a glance.",
-    "link": "content/projects/project-template.html",
+    "link": "project.html",
     "title": "RaceSpace Platform MVP Concept",
     "category": "UX",
     "thumbnail": "content/images/racespace/f1thumb.png",
@@ -17,7 +17,7 @@
     "id": "suite-as-pie",
     "shortdesc": "Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
     "desc": "About this project: this is an Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
-    "link": "content/projects/project-template.html",
+    "link": "project.html",
     "title": "Suite as Pie hotel service app",
     "category": "UX",
     "thumbnail": "content/images/suiteaspie/sapthumb.png",
@@ -31,7 +31,7 @@
     "id": "hp",
     "shortdesc": "HP short description.",
     "desc": "About this project: this is an HP project.",
-    "link": "content/projects/project-template.html",
+    "link": "project.html",
     "title": "HP Printer User Interface",
     "category": "UI",
     "thumbnail": "content/images/hp/hpthumb.png",
@@ -45,7 +45,7 @@
     "id": "olamundo",
     "shortdesc": "Olamundo short description.",
     "desc": "About this project: this is an Olamundo project.",
-    "link": "content/projects/project-template.html",
+    "link": "project.html",
     "title": "Olamundo User Interface",
     "category": "UI, UX",
     "thumbnail": "content/images/olamundo/omthumb.png",
@@ -59,7 +59,7 @@
    "id": "safebreach",
     "shortdesc": "safebreach short description.",
     "desc": "About this project: this is an safebreach project.",
-    "link": "content/projects/project-template.html",
+    "link": "project.html",
     "title": "safebreach User Interface",
     "category": "UI, UX",
     "thumbnail": "content/images/safebreach/safebreachthumb.png",
