--- a/data/projects.json
+++ b/data/projects.json
@@ -4,7 +4,8 @@
     "shortdesc": "An interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts — enabling faster, smarter selling and sponsorship decisions at a glance.",
     "desc": "About this project: this was an interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts — enabling faster, smarter selling and sponsorship decisions at a glance.",
     "link": "project.html",
-    "title": "RaceSpace Platform MVP Concept",
+    "title_bold": "RaceSpace",
+    "title_regular": "F1 ad sales Platform Concept",
     "category": "UX",
     "thumbnail": "content/images/racespace/f1thumb.png",
     "imagefolder": "content/images/racespace",
@@ -16,7 +17,8 @@
     "shortdesc": "Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
     "desc": "About this project: this is an Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
     "link": "project.html",
-    "title": "Suite as Pie hotel service app",
+    "title_bold": "Suite as Pie",
+    "title_regular": "hotel service app",
     "category": "UX",
     "thumbnail": "content/images/suiteaspie/sapthumb.png",
     "imagefolder": "content/images/suiteaspie",
@@ -28,7 +30,8 @@
     "shortdesc": "HP short description.",
     "desc": "About this project: this is an HP project.",
     "link": "project.html",
-    "title": "HP Printer User Interface",
+    "title_bold": "HP Printer",
+    "title_regular": " User Interface",
     "category": "UI",
     "thumbnail": "content/images/hp/hpthumb.png",
     "imagefolder": "content/images/hp",
@@ -40,7 +43,8 @@
     "shortdesc": "Olamundo short description.",
     "desc": "About this project: this is an Olamundo project.",
     "link": "project.html",
-    "title": "Olamundo User Interface",
+    "title_bold": "Olamundo",
+    "title_regular": "communication app for non-verbal kids",
     "category": "UI, UX",
     "thumbnail": "content/images/olamundo/omthumb.png",
     "imagefolder": "content/images/olamundo",
@@ -52,7 +56,8 @@
     "shortdesc": "safebreach short description.",
     "desc": "About this project: this is an safebreach project.",
     "link": "project.html",
-    "title": "safebreach User Interface",
+    "title_bold": "SafeBreach",
+    "title_regular": "cybersecurity platform",
     "category": "UI, UX",
     "thumbnail": "content/images/safebreach/safebreachthumb.png",
     "imagefolder": "content/images/safebreach",
@@ -64,7 +69,8 @@
     "shortdesc": "x4 short description.",
     "desc": "About this project: this is an x4 project.",
     "link": "project.html",
-    "title": "x4 Branding",
+    "title_bold": "x4",
+    "title_regular": "Sandisk Technology Branding",
     "category": "Branding",
     "thumbnail": "content/images/x4/x4thumb.png",
     "imagefolder": "content/images/x4",
@@ -76,8 +82,9 @@
     "shortdesc": "fig short description.",
     "desc": "About this project: this is a fig project.",
     "link": "project.html",
-    "title": "Ceramic figurine slipcasting",
-    "category": "Personal",
+    "title_bold": "Ceramic figurine",
+    "title_regular": "ceramic slipcasting",
+    "category": "Personal, Industrial Design",
     "thumbnail": "content/images/fig/figthumb.png",
     "imagefolder": "content/images/fig",
     "imageprefix": "fig",
@@ -88,7 +95,8 @@
     "shortdesc": "sparkly short description.",
     "desc": "About this project: this is a sparkly project.",
     "link": "project.html",
-    "title": "Vector grahpics poster",
+    "title_bold": "Sparkly!",
+    "title_regular": "purely Vector graphic poster",
     "category": "Personal, Illustration",
     "thumbnail": "content/images/sparkly/sparklythumb.png",
     "imagefolder": "content/images/sparkly",
