PP removed top description-duplicate

--- a/data/projects.json
+++ b/data/projects.json
@@ -69,8 +69,8 @@
     "shortdesc": "x4 short description.",
     "desc": "About this project: this is an x4 project.",
     "link": "project.html",
-    "title_bold": "x4",
-    "title_regular": "Sandisk Technology Branding",
+    "title_bold": "x4 Sandisk",
+    "title_regular": "Technology Branding",
     "category": "Branding",
     "thumbnail": "content/images/x4/x4thumb.png",
     "imagefolder": "content/images/x4",
