glightbox-gallery added

--- a/data/projects.json
+++ b/data/projects.json
@@ -44,7 +44,7 @@
     "desc": "About this project: this is an Olamundo project.",
     "link": "project.html",
     "title_bold": "Olamundo",
-    "title_regular": "communication app for non-verbal kids",
+    "title_regular": "communication app",
     "category": "UI, UX",
     "thumbnail": "content/images/olamundo/omthumb.png",
     "imagefolder": "content/images/olamundo",
