gp overlay and text

--- a/data/projects.json
+++ b/data/projects.json
@@ -6,7 +6,7 @@
     "desc": "About this project: this was an interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts, enabling faster, smarter selling and sponsorship decisions at a glance.",
     "link": "project.html",
     "title_bold": "RaceSpace",
-    "title_regular": "F1 ad sales Platform Concept",
+    "title_regular": "F1 ad sales Platform",
     "category": "UX",
     "thumbnail": "content/images/racespace/f1thumb.png",
     "imagefolder": "content/images/racespace",
@@ -66,7 +66,7 @@
     "desc": "About this project: this is an safebreach project.",
     "link": "project.html",
     "title_bold": "SafeBreach",
-    "title_regular": "cybersecurity platform",
+    "title_regular": "cybersecurity",
     "category": "UI, UX",
     "thumbnail": "content/images/safebreach/safebreachthumb.png",
     "imagefolder": "content/images/safebreach",
@@ -97,7 +97,7 @@
     "desc": "About this project: this is a fig project.",
     "link": "project.html",
     "title_bold": "Ceramic figurine",
-    "title_regular": "ceramic slipcasting",
+    "title_regular": "slipcasting",
     "category": "Personal, Industrial Design",
     "thumbnail": "content/images/fig/figthumb.png",
     "imagefolder": "content/images/fig",
@@ -113,7 +113,7 @@
     "desc": "About this project: this is a sparkly project.",
     "link": "project.html",
     "title_bold": "Sparkly!",
-    "title_regular": "purely Vector graphic poster",
+    "title_regular": "purely Vector graphics",
     "category": "Personal, Illustration",
     "thumbnail": "content/images/sparkly/sparklythumb.png",
     "imagefolder": "content/images/sparkly",
