protected projects gp thumb added

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,5 +1,37 @@
 [
+    {
+    "id": "EQCapture",
+	  "gallery_desc": "Invantory tracking",
+    "shortdesc": "shortdescription",
+    "desc": "About this project: EQCapture",
+    "link": "project.html",
+    "title_bold": "🔒 EQCapture",
+    "title_regular": "inventory tracking ",
+    "category": "UX",
+    "thumbnail": "content/images/eqc/eqcthumb.png",
+    "imagefolder": "content/images/eqc",
+    "imageprefix": "eqc",
+    "homepage": false,
+    "protected": true,
+    "show": true
+  },
   {
+    "id": "search",
+	  "gallery_desc": "Global assisted search on a complex system",
+    "shortdesc": "12345678900",
+    "desc": "About this project: search",
+    "link": "project.html",
+    "title_bold": "🔒 Search",
+    "title_regular": "on a complex system ",
+    "category": "UX",
+    "thumbnail": "content/images/search/searcthumb.png",
+    "imagefolder": "content/images/search",
+    "imageprefix": "search",
+    "homepage": false,
+    "protected": true,
+    "show": true
+  },
+    {
     "id": "racespace",
 	  "gallery_desc": "An interactive sales dashboard for Formula-1 teams",
     "shortdesc": "An interactive sales dashboard for Formula-1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts, enabling faster, smarter selling and sponsorship decisions at a glance.",
@@ -96,7 +128,7 @@
     "shortdesc": "fig short description.",
     "desc": "About this project: this is a fig project.",
     "link": "project.html",
-    "title_bold": "Ceramic figurine",
+    "title_bold": "🔒 Ceramic figurine",
     "title_regular": "slipcasting",
     "category": "Personal, Industrial Design",
     "thumbnail": "content/images/fig/figthumb.png",
