pdf ang gallery-20min limit on Protected project

--- a/data/projects.json
+++ b/data/projects.json
@@ -4,12 +4,12 @@
 	  "gallery_desc": "Invantory tracking",
     "shortdesc": "shortdescription",
     "desc": "About this project: EQCapture",
-    "link": "project.html",
+    "link": "project.php?id=EQCapture",
     "title_bold": "🔒 EQCapture",
     "title_regular": "inventory tracking ",
     "category": "UX",
     "thumbnail": "content/images/eqc/eqcthumb.png",
-    "imagefolder": "content/images/eqc",
+    "imagefolder": "content/images/eqc/eqcdesign.pdf",
     "imageprefix": "eqc",
     "homepage": false,
     "protected": true,
@@ -20,12 +20,12 @@
 	  "gallery_desc": "Global assisted search on a complex system",
     "shortdesc": "12345678900",
     "desc": "About this project: search",
-    "link": "project.html",
+    "link": "project.php?id=search",
     "title_bold": "🔒 Search",
     "title_regular": "on a complex system ",
     "category": "UX",
     "thumbnail": "content/images/search/searcthumb.png",
-    "imagefolder": "content/images/search",
+    "imagefolder": "content/images/search/searchdesign.pdf",
     "imageprefix": "search",
     "homepage": false,
     "protected": true,
@@ -36,7 +36,7 @@
 	  "gallery_desc": "An interactive sales dashboard for Formula-1 teams",
     "shortdesc": "An interactive sales dashboard for Formula-1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts, enabling faster, smarter selling and sponsorship decisions at a glance.",
     "desc": "About this project: this was an interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts, enabling faster, smarter selling and sponsorship decisions at a glance.",
-    "link": "project.html",
+    "link": "project.php?id=racespace",
     "title_bold": "RaceSpace",
     "title_regular": "F1 ad sales Platform",
     "category": "UX",
@@ -51,7 +51,7 @@
 	  "gallery_desc": "Effortless in-room ordering for hotel guests",
     "shortdesc": "Effortless in-room ordering for hotel guests. Suite as pie streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
     "desc": "About this project: this is an Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
-    "link": "project.html",
+    "link": "project.php?id=suite-as-pie",
     "title_bold": "Suite as Pie",
     "title_regular": "hotel service app",
     "category": "UX",
@@ -66,7 +66,7 @@
     "shortdesc": "HP short description.",
 	  "gallery_desc": "XXXXX XXXXX",
     "desc": "About this project: this is an HP project.",
-    "link": "project.html",
+    "link": "project.php?id=hp",
     "title_bold": "HP Printer",
     "title_regular": " User Interface",
     "category": "UI",
@@ -81,7 +81,7 @@
 	  "gallery_desc": "XXXXX XXXXX",
     "shortdesc": "Olamundo short description.",
     "desc": "About this project: this is an Olamundo project.",
-    "link": "project.html",
+    "link": "project.php?id=olamundo",
     "title_bold": "Olamundo",
     "title_regular": "communication app",
     "category": "UI, UX",
@@ -96,7 +96,7 @@
 	  "gallery_desc": "XXXXX XXXXX",
     "shortdesc": "safebreach short description.",
     "desc": "About this project: this is an safebreach project.",
-    "link": "project.html",
+    "link": "project.php?id=safebreach",
     "title_bold": "SafeBreach",
     "title_regular": "cybersecurity",
     "category": "UI, UX",
@@ -111,7 +111,7 @@
     "shortdesc": "x4 short description.",
 	  "gallery_desc": "XXXXX XXXXX",
     "desc": "About this project: this is an x4 project.",
-    "link": "project.html",
+    "link": "project.php?id=x4",
     "title_bold": "x4 Sandisk",
     "title_regular": "Technology Branding",
     "category": "Branding",
@@ -127,7 +127,7 @@
 	  "gallery_desc": "XXXXX XXXXX",
     "shortdesc": "fig short description.",
     "desc": "About this project: this is a fig project.",
-    "link": "project.html",
+    "link": "project.php?id=fig",
     "title_bold": "🔒 Ceramic figurine",
     "title_regular": "slipcasting",
     "category": "Personal, Industrial Design",
@@ -143,7 +143,7 @@
 	  "gallery_desc": "XXXXX XXXXX",
     "shortdesc": "sparkly short description.",
     "desc": "About this project: this is a sparkly project.",
-    "link": "project.html",
+    "link": "project.php?id=sparkly",
     "title_bold": "Sparkly!",
     "title_regular": "purely Vector graphics",
     "category": "Personal, Illustration",
